Adicion de paquete fullpage para margenes más pequeños

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{amsmath}
+\usepackage{fullpage}
 
 \title{Resumen general de Matemáticas Discretas}
 \author{Andrés Cabezas}
