Adicion de autor Sebastián Poblete

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \usepackage{fullpage}
 
 \title{Resumen general de Matemáticas Discretas}
-\author{Andrés Cabezas}
+\author{Andrés Cabezas y Sebastián Poblete}
 
 \begin{document}
 
