Corrección en redacción de consecuencia logica

--- a/main.tex
+++ b/main.tex
@@ -264,7 +264,7 @@ forma:
                              $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 0 & 0 & $\cdots$ & 1 & 0 \\
     \end{tabular}
 \]
-En donde tenemos una fila marcada en gris, en donde podemos ver que todas las formulas del conjunto $\Sigma$ son iguales a 1 y tambien que $\alpha$ es 1. Si esta condición se cumple \textbf{siempre}, entonces estamos en presencia de una consecuencia lógica.\\
+En donde tenemos una fila marcada en gris, en donde podemos ver que todas las formulas del conjunto $\Sigma$ son iguales a 1 y tambien que $\alpha$ es 1. Si esto se cumple y no sucede que tenemos todas las formulas de la izquierda con unos, y el alpha de la derecha con un 0, entonces tenemos consecuencia lógica.\\
 Otro ejemplo:
 \[
     \begin{tabular}{ccc|cccc|c}
@@ -274,7 +274,7 @@ Otro ejemplo:
                              $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 0 & 0 & $\cdots$ & 1 & 0 \\
     \end{tabular}
 \]
-En este caso, ya no hay consecuencia lógica, debido a que no se cumple la condición establecida antes.\\
+En este caso, ya no hay consecuencia lógica, debido a que no se cumple la condición establecida antes. La fila marcada en gris, tiene un 0 en la formula final, lo que nos dice que no es consecuencia lógica.\\
 \textbf{NOTA:} Si tenemos un conjunto $\Sigma$ tal que es imposible obtener una fila con solo unos, entonces \textbf{cualquier cosa} puede ser consecuencia lógica de $\Sigma$. ¡Usar con sabiduria para demostraciones!
 
 \subsection{Consecuencias lógicas clásicas}
