Avances Clase 4-Abril (NO TERMINADO)

--- a/main.tex
+++ b/main.tex
@@ -518,6 +518,70 @@ $$\Sigma \models \alpha$$
 
 \end{enumerate}
 
+
+\section{Demostraciones}
+\subsection{Afirmación matemática}
+Una afirmación matemática consiste en una proposición en lógica de predicados
+\subsubsection*{Tipos de afirmaciones matemáticas}
+\begin{itemize}
+    \item Teorema: Afirmación matemática verdadera y demostrable.
+    \item Proposición: Similar a un Teorema, pero de menor importancia.
+    \item Definición: Sentencia usada para explicar la naturaleza de algún objeto matemático.
+    \item Axioma: Suposición que se considera cierta, y se usa como base para demostrar algo.
+    \item Lema: Proposición demostrada, usada como herramienta para demostrar un teorema.
+    \item Corolario: Teorema que se deduce de un axioma
+    \item Conjetura: Afirmación que es intuitivamente correcta, pero que no ha sido demostrada.
+    \item Problema: Conjetura, que podría ser verdadera o falsa. No se sabe su valor de verdad.
+\end{itemize}
+
+\subsection{¿Qué es una demostración?}
+Una demostración es un argumento válido que permite establecer la verdad de una afirmación matemática.\\
+Con argumento válido, nos referimos a una secuencia de argumentos que puede estar compuesta por
+\begin{itemize}
+    \item Axiomas.
+    \item Hipótesis o supuestos.
+    \item Afirmaciones implicadas por argumentos previos.
+\end{itemize}
+
+Cada argumento en la secuencia lógica de argumentos está conectado con el anterior por una \textit{regla de inferencia} (consecuencia lógica).\\
+El último paso de la secuencia establece la verdad de la afirmación.
+
+\subsubsection*{¿Qué NO es una demostración?}
+\begin{itemize}
+    \item Una secuencia de símbolos.
+    \item Una secuencia disconexa o imprecisa de argumentos.
+\end{itemize}
+Al final, la secuencia de argumentos debe ser lo más clara, precisa y completa posible, para así, convencer al lector u oyente, sin dar lugar a dudas acerca de la veracidad de la demostración.
+
+\subsection{¿Cómo puedo encontrar una secuencia de argumentos?}
+Si lo que se desea es encontrar una secuencia de argumentos que logre demostrar un teorema se requiere de las siguientes cosas
+\begin{itemize}
+    \item \textit{Experiencia}: La práctica hace al maestro.
+    \item \textit{Intuición}: Coloquialmente conocida como \textit{La cachativa}
+    \item \textit{Creatividad}: Pensar fuera de la caja
+    \item \textit{Perseverancia}: If at first you don't succeed, try, try again.
+    \item \textbf{Métodos de demostración}
+\end{itemize}
+
+\subsection{Métodos de demostración}
+\subsubsection{Demostración Directa}
+
+\subsubsection{Demostración por Contrapositivo}
+
+\subsubsection{Demostración por Contradicción}
+
+\subsubsection{Demostración por Análisis de Casos}
+
+\subsubsection{Demostración de Doble Implicación}
+
+\subsubsection{Demostración por contra-ejemplo}
+
+\subsubsection{Demostración Existencial}
+
+\subsubsection{Demostración por Inducción}
+
+
+%------Anexo---------------------
 \newpage
 
 \section{Anexo}
@@ -553,5 +617,7 @@ Entonces, la consecuencia lógica quedaría así:
     \item $X(a) \wedge \neg E(a)$ (Conjunción 6. y 7.)
     \item $\exists x . X(x) \wedge \neg E(x)$ (Generalización Existencial 8.)
 \end{enumerate}
+
+
 
 \end{document}
